# Crew-AI

./: report.md
ai_groq_offline/: README.md  pyproject.toml
ai_groq_offline/src/ai_groq_offline/: crew.py  main.py
ai_groq_offline/src/ai_groq_offline/config/: agents.yaml  tasks.yaml
ai_groq_web/: README.md  pyproject.toml
ai_groq_web/src/ai_groq_web/: crew.py  main.py
ai_groq_web/src/ai_groq_web/config/: agents.yaml  tasks.yaml
ai_latest_development/: pyproject.toml
ai_latest_development/src/ai_latest_development/: crew.py  main.py
ai_ollama_offline/: README.md  pyproject.toml
ai_ollama_offline/src/ai_ollama_offline/: crew.py  main.py
ai_ollama_offline/src/ai_ollama_offline/config/: agents.yaml  tasks.yaml
ai_ollama_web/: README.md  pyproject.toml
ai_ollama_web/src/ai_ollama_web/: crew.py  main.py
