[project]
name = "ai_groq_offline"
version = "0.1.0"
description = "ai_groq_offline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
ai_groq_offline = "ai_groq_offline.main:run"
run_crew = "ai_groq_offline.main:run"
train = "ai_groq_offline.main:train"
replay = "ai_groq_offline.main:replay"
test = "ai_groq_offline.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
