[project]
name = "ai_ollama_web"
version = "0.1.0"
description = "ai_ollama_web using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
ai_ollama_web = "ai_ollama_web.main:run"
run_crew = "ai_ollama_web.main:run"
train = "ai_ollama_web.main:train"
replay = "ai_ollama_web.main:replay"
test = "ai_ollama_web.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
